[UI-136] - Checkbox. - Word wrap text overflow fix.

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -39,6 +39,7 @@
         color: var(--color-secondary-500);
         cursor: pointer;
         line-height: 22px;
+        word-break: break-word;
     }
 
     &.disabled {
